--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TTA\\TUKTUK;Database=TTA_V1;User Id=sa;Password=Password123"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
