Tested token authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+
+  "Jwt": {
+    "SecretKey": "ThisIsMySuperSecretKey",
+    "Issuer": "TTA",
+    "Audience": "TTA"
   }
 }
